@@ -13,6 +13,7 @@ apt (0.9.7.7) UNRELEASED; urgency=low
   * apt-pkg/depcache.cc:
     - don't call MarkInstall with the FromUser flag set for packages
       which are dependencies of APT::Never-MarkAuto-Sections matchers
+    - no mode changes should obviously be ok for pkgDepCache::IsModeChangeOk
 
  -- Jordi Mallach <jordi@debian.org>  Thu, 18 Oct 2012 23:30:46 +0200
 
